--- a/tips/templates/evaluation.html
+++ b/tips/templates/evaluation.html
@@ -2,112 +2,78 @@
 
 {% block content %}
 
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">        
-  <h1 class="h2">Tips Overview</h1>
-  <div class="btn-toolbar mb-2 mb-md-0">
-    <div class="btn-group me-2">
-      <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-      <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-    </div>
-    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-      <span data-feather="calendar" class="align-text-bottom"></span>
-      This week
-    </button>
-  </div>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
+     xmlns:task.done_datetime xmlns:task.done_datetime xmlns:task.done_datetime xmlns:task.done_datetime>
+    <h1 class="h2">Tips Overview</h1>
 </div>
-
-<canvas class="my-4 w-100" id="tipsChart" width="900" height="380"></canvas>
 
 <div style="width: 100%;">
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-        <th scope="col" width="100%">Name</th>
-        <th scope="col">Today</th>
-        <th scope="col">This month</th>
-        <th scope="col">Last month</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for user in evaluation %}
-      <tr>
-        <td>
-          {% if user.user_firstname and user.user_lastname %}
-            {{ user.user_firstname }} {{ user.user_lastname }}
-          {% else %}
-            {{ user.user_name }}
-          {% endif %}
-        </th>
-        <td>{{ user.amountToday|floatformat:2 }} €</td>
-        <td>{{ user.amountThisMonth|floatformat:2 }} €</td>
-        <td>{{ user.amountLastMonth|floatformat:2 }} €</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div>
-
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">        
-  <h1 class="h2">Latest Tips</h1>
-  <div class="btn-toolbar mb-2 mb-md-0">
-    <div class="btn-group me-2">
-      <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-      <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+    {% for entry in items%}
+    <div class="list-group">
+        <h4 data-bs-toggle="collapse" href="#collapse{{ entry.id }}" role="button" class="list-group-item" style="margin-bottom: 0px; margin-top: 15px;">{{ entry.date }}</h4>
+        <div class="list-group-item collapse {% if entry.date == today %}show{% endif %}" id="collapse{{ entry.id }}">
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th scope="col" style="white-space: nowrap;">Name</th>
+                    <th scope="col">Stunden</th>
+                    <th scope="col">Wert</th>
+                </tr>
+                </thead>
+                <tbody>
+                    {% for tip in entry.assignedTips %}
+                      <tr>
+                          <td style="vertical-align: middle;"><label>{{ tip.name }}</label></td>
+                          <td style="vertical-align: middle;"><label>{{ tip.hours }}</label></td>
+                          <td style="vertical-align: middle;"><label>€{{ tip.amount }}</label></td>
+                      </tr>
+                    {% endfor %}
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td style="vertical-align: middle;"><label><strong>Summe</strong></label></td>
+                        <td style="vertical-align: middle;"><label><strong>{{ entry.sumHours }}</strong></label></td>
+                        <td style="vertical-align: middle;"><label><strong>€{{ entry.sumAmount }}</strong></label></td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
     </div>
-    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-      <span data-feather="calendar" class="align-text-bottom"></span>
-      This week
-    </button>
-  </div>
+    {% endfor %}
 </div>
 
-<div class="table-responsive" style="width: 100%;">
-  <table class="table table-striped table-sm table-hover">
-    <thead>
-      <tr>
-        <th scope="col" width="100%">Name</th>
-        <th scope="col">Amount</th>
-        <th scope="col">Date</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for tip in latestTips %}
-      <tr>
-        <td>
-          {{ tip.user }}
-        </th>
-        <td>{{ tip.amount|floatformat:2 }} €</td>
-        <td>{{ tip.date }}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div>
+<style>
+  table {
+    font-size: 1rem;
+  }
+  label {
+    width: 100%;
+    padding: .9rem;
+    user-select: none;
+    height: 100%;
+  }
+  tbody tr {
+    background-color: rgb(248, 215, 218);
+    border-bottom-color: rgb(201, 192, 192) !important;
+  }
+  tbody tr.done {
+    background-color: rgb(209, 231, 221);
+  }
+  td:not(first-child) {
+    padding: 0rem !important;
+    overflow-wrap: anywhere;
+  }
+  td:first-child {
+    padding: 0.8rem !important;
+  }
+</style>
 
-{% load static %}
-<script src="{% static 'js/chartjs-4.2.0.min.js' %}"></script>
-<script language="javascript">
+<script type="text/javascript">
   (() => {
-    'use strict'
-    // Graphs
-    const ctx = document.getElementById('tipsChart')
-    // eslint-disable-next-line no-unused-vars
-    const myChart = new Chart(ctx, {
-      type: 'bar',
-      data: {
-        labels: {{ chartLabels | safe }},
-        datasets: [{
-          data: {{ chartValues | safe }},
-        }]
-      },
-      options: {
-        plugins: {
-          legend: {
-              display: false
-          }
-        }
-      }
-    })
+    console.log("collapse{{ today }}");
+    document.getElementById("collapse{{ today }}").scrollIntoView({
+      behavior: 'smooth'
+    });
   })()
 </script>
 
