--- a/tips/templates/evaluation.html
+++ b/tips/templates/evaluation.html
@@ -4,7 +4,7 @@
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
      xmlns:task.done_datetime xmlns:task.done_datetime xmlns:task.done_datetime xmlns:task.done_datetime>
-    <h1 class="h2">Tips Overview</h1>
+    <h1 class="h2">Tips Overview (€ {{ sum }})</h1>
 </div>
 
 <div style="width: 100%;">
@@ -25,7 +25,7 @@
                       <tr>
                           <td style="vertical-align: middle;"><label>{{ tip.name }}</label></td>
                           <td style="vertical-align: middle;"><label>{{ tip.hours }}</label></td>
-                          <td style="vertical-align: middle;"><label>€{{ tip.amount }}</label></td>
+                          <td style="vertical-align: middle;"><label>€ {{ tip.amount }}</label></td>
                       </tr>
                     {% endfor %}
                 </tbody>
@@ -33,7 +33,7 @@
                     <tr>
                         <td style="vertical-align: middle;"><label><strong>Summe</strong></label></td>
                         <td style="vertical-align: middle;"><label><strong>{{ entry.sumHours }}</strong></label></td>
-                        <td style="vertical-align: middle;"><label><strong>€{{ entry.sumAmount }}</strong></label></td>
+                        <td style="vertical-align: middle;"><label><strong>€ {{ entry.sumAmount }}</strong></label></td>
                     </tr>
                 </tfoot>
             </table>
@@ -53,7 +53,6 @@
     height: 100%;
   }
   tbody tr {
-    background-color: rgb(248, 215, 218);
     border-bottom-color: rgb(201, 192, 192) !important;
   }
   tbody tr.done {
