--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
+<div class="alert alert-success hidden" role="alert">
+    Rating submitted successfully.
+</div>
+
+<div class="alert alert-danger hidden" role="alert">
+    Submitting rating failed.
+</div>
+
 {% if showOpening or showClosing %}
     <div class="row g-1">
 {% endif %}
@@ -72,7 +80,51 @@
     </div>
 {% endif %}
 
-<div class="row g-0">
+
+<div class="row g-1">
+    <div class="col-lg-6 pe-lg-2 mb-3">
+        <div class="card h-lg-100 overflow-hidden">
+            <div class="card-header bg-light">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <h6 class="mb-0">Shift Rating</h6>
+                    </div>
+                    <div class="col-auto text-center pe-x1">
+                        <br><br>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body p-0">
+                <div class="list-group w-auto rounded-0">
+                    <div class="row align-items-center" style="padding:15px;">
+                      <form id="ratingForm" method="post">
+                        {% csrf_token %}
+                        <h5>How was todays shift for you?</h5>
+                        <input type="text" name="user" value="{{user.id}}" style="display: none;" />
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="stars">
+                                    <input class="star star-5" id="star-5" type="radio" name="star" value="5"/>
+                                    <label class="star star-5" for="star-5"></label>
+                                    <input class="star star-4" id="star-4" type="radio" name="star" value="4"/>
+                                    <label class="star star-4" for="star-4"></label>
+                                    <input class="star star-3" id="star-3" type="radio" name="star" value="3"/>
+                                    <label class="star star-3" for="star-3"></label>
+                                    <input class="star star-2" id="star-2" type="radio" name="star" value="2"/>
+                                    <label class="star star-2" for="star-2"></label>
+                                    <input class="star star-1" id="star-1" type="radio" name="star" value="1"/>
+                                    <label class="star star-1" for="star-1"></label>
+                                </div>
+                            </div>
+                        </div>
+                        <input type="submit" class="w-100 btn btn-lg btn-primary" value="Submit" style="margin-top: 1rem; max-width: 200px;" />
+                      </form>
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="col-lg-6 pe-lg-2 mb-3">
         <div class="card h-lg-100 overflow-hidden">
             <div class="card-header bg-light">
@@ -126,10 +178,12 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="card-footer bg-light p-0"><a class="btn btn-sm btn-link d-block w-100 py-2" href="/tips">Submit
-                Tips<span class="fas fa-chevron-right ms-1 fs--2"></span></a></div>-->
         </div>
     </div>
+
+</div>
+
+<div class="row g-0">
 
     <div class="col-lg-6 pe-lg-2 mb-3">
         <div class="card h-lg-100 overflow-hidden">
@@ -169,9 +223,8 @@
             </div>
         </div>
     </div>
-</div>
-<div class="row g-1">
-    <div class="col-lg-6 pe-lg-2 mb-3">
+
+     <div class="col-lg-6 pe-lg-2 mb-3">
         <div class="card h-lg-100 overflow-hidden">
             <div class="card-header bg-light">
                 <div class="row align-items-center">
@@ -203,6 +256,30 @@
     </div>
 </div>
 
+<div class="modal fade modal-tour" tabindex="-1" role="dialog" id="submitModal">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content rounded-4 shadow">
+          <div class="modal-body p-5">
+            <h2 class="fw-bold mb-0">Submit tips</h2>
+            <br>
+            <span class="submitModalContent"></span>
+            <button id="submitModalButton" type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Yes</button>
+          </div>
+        </div>
+      </div>
+  </div>
+
+    <div class="modal fade modal-tour" tabindex="-1" role="dialog" id="errorModal">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content rounded-4 shadow">
+          <div class="modal-body p-5">
+            <h2 class="fw-bold mb-0">Error</h2>
+            <br>
+            <span class="errorModalContent">Sorry, you forgot to rate your shift.</span>
+          </div>
+        </div>
+      </div>
+  </div>
 
 <style>
   .btn-link {
@@ -253,7 +330,113 @@
     color: #8a7f82;
   }
 
-</style>
+    div.stars {
+      display: inline-block;
+    }
+
+    input.star { display: none; }
+
+    label.star {
+      float: right;
+      padding: 5px;
+      font-size: 36px;
+      color: #000000;
+      transition: all .2s;
+    }
+
+    input.star:checked ~ label.star:before {
+      content: '★';
+      color: #FD4;
+      transition: all .25s;
+    }
+
+    input.star-5:checked ~ label.star:before {
+      color: #FE7;
+      text-shadow: 0 0 5px #952;
+    }
+
+    input.star-1:checked ~ label.star:before { color: #F62; }
+
+    label.star:hover { transform: rotate(-15deg) scale(1.3); }
+
+    label.star:before {
+      content: '☆';
+    }
+  </style>
+<script>
+    function submitForm() {
+      const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+      var alerts = document.getElementsByClassName("alert");
+      for(var i = 0; i < alerts.length; i++) {
+        var alert = alerts[i];
+        alert.classList.add('hidden');
+      }
+      var form = document.querySelector('#ratingForm');
+      var form_data = new FormData(form);
+
+      let objSerializedForm = {};
+      console.log(form_data);
+      var star;
+      for (let [name, value] of form_data) {
+        if (name === "user") {
+          userid = value;
+        }
+        if (name === "star") {
+          star = value;
+        }
+      }
+      objSerializedForm[userid] = {'star': star};
+      console.log(objSerializedForm);
+
+      var request = new XMLHttpRequest();
+      request.onreadystatechange = function() {
+        if (request.readyState == 4) {
+          if(request.status == 200) {
+            var element = document.getElementsByClassName("alert-success")[0];
+            element.classList.remove("hidden");
+          } else {
+            var element = document.getElementsByClassName("alert-danger")[0];
+            element.classList.remove("hidden");
+          }
+        }
+        window.scrollTo(0, 0);
+      }
+      request.open('POST', '/ratings/');
+      request.setRequestHeader("X-CSRFToken", csrftoken);
+      request.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+      request.send(JSON.stringify(objSerializedForm));
+      form.reset();
+    }
+
+    document.addEventListener("DOMContentLoaded", function() {
+
+      document.getElementById('submitModalButton').onclick = function (evt) {
+        submitForm();
+      }
+
+      document.getElementById('ratingForm').onsubmit = function (evt) {
+        evt.preventDefault();
+        var submitModal = new bootstrap.Modal(document.getElementById("submitModal"), {});
+        var errorModal = new bootstrap.Modal(document.getElementById("errorModal"), {});
+        var form = document.querySelector('#ratingForm');
+        var form_data = new FormData(form);
+        var star;
+        for (let [name, value] of form_data) {
+          if (name === "star") {
+            star = value;
+          }
+        }
+        if (star == null) {
+            errorModal.show();
+        }
+        else {
+            var submitModalContent = document.querySelector('.submitModalContent').innerHTML = 'Are you sure, you want to submit ' + star + ' stars?';
+            submitModal.show();
+        }
+      }
+
+    });
+  </script>
 
 {% load static %}
 {% endblock %}
