--- a/tips/templates/tips.html
+++ b/tips/templates/tips.html
@@ -3,17 +3,17 @@
 {% block content %}
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-  <h1 class="h2">Submit tips and rating</h1>
+  <h1 class="h2">Submit tips</h1>
 </div>
 
 <div class="list-group w-auto">
 
   <div class="alert alert-danger hidden" role="alert">
-    Submitting the tips and rating failed.
+    Submitting the tips failed.
   </div>
 
   <div class="alert alert-success hidden" role="alert">
-    Tips and rating submitted successfully.
+    Tips submitted successfully.
   </div>
 
   <form id="tipForm" method="post">
@@ -25,24 +25,6 @@
         <input id="tip" type="text" pattern="[+-]?([0-9]*[.,])?[0-9]+" inputmode="decimal" required class="form-control" name="tip" value="0.0" style="max-width: 100px;">
         <label style="align-items: end;font-size: x-large;display: flex;">€</label>
       </div>
-    </div>
-    <div class="mb-4 mt-4 border-bottom"></div>
-    <h5>How was todays shift for you?</h5>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="stars">
-                <input class="star star-5" id="star-5" type="radio" name="star" value="5"/>
-                <label class="star star-5" for="star-5"></label>
-                <input class="star star-4" id="star-4" type="radio" name="star" value="4"/>
-                <label class="star star-4" for="star-4"></label>
-                <input class="star star-3" id="star-3" type="radio" name="star" value="3"/>
-                <label class="star star-3" for="star-3"></label>
-                <input class="star star-2" id="star-2" type="radio" name="star" value="2"/>
-                <label class="star star-2" for="star-2"></label>
-                <input class="star star-1" id="star-1" type="radio" name="star" value="1"/>
-                <label class="star star-1" for="star-1"></label>
-            </div>
-        </div>
     </div>
     <input type="submit" class="w-100 btn btn-lg btn-primary" value="Submit" style="margin-top: 1rem; max-width: 200px;" />
   </form>
@@ -77,19 +59,6 @@
         </div>
       </div>
   </div>
-
-    <div class="modal fade modal-tour" tabindex="-1" role="dialog" id="errorModal">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content rounded-4 shadow">
-          <div class="modal-body p-5">
-            <h2 class="fw-bold mb-0">Error</h2>
-            <br>
-            <span class="errorModalContent">Sorry, you forgot to rate your shift.</span>
-          </div>
-        </div>
-      </div>
-  </div>
-
   <script>
     function submitForm() {
       const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
@@ -108,14 +77,11 @@
         if (name === "user") {
           userid = value;
         }
-        if (name === "star") {
-          star = value;
-        }
         if (name === "tip") {
           tip = value;
         }
       }
-      objSerializedForm[userid] = {'tip': tip, 'star': star};
+      objSerializedForm[userid] = {'tip': tip};
       console.log(objSerializedForm);
 
       var request = new XMLHttpRequest();
@@ -147,64 +113,20 @@
       document.getElementById('tipForm').onsubmit = function (evt) {
         evt.preventDefault();
         var submitModal = new bootstrap.Modal(document.getElementById("submitModal"), {});
-        var errorModal = new bootstrap.Modal(document.getElementById("errorModal"), {});
         var form = document.querySelector('#tipForm');
         var form_data = new FormData(form);
         var tip = 0;
-        var star;
         for (let [name, value] of form_data) {
           if (name === "tip") {
             tip = value;
           }
-          if (name === "star") {
-            star = value;
-          }
         }
-        if (star == null) {
-            errorModal.show();
-        }
-        else {
-            var submitModalContent = document.querySelector('.submitModalContent').innerHTML = 'Are you sure, you want to submit €' + tip + '?';
-            submitModal.show();
-        }
+        var submitModalContent = document.querySelector('.submitModalContent').innerHTML = 'Are you sure, you want to submit €' + tip + '?';
+        submitModal.show();
       }
 
     });
   </script>
-  <style>
-    div.stars {
-      display: inline-block;
-    }
-
-    input.star { display: none; }
-
-    label.star {
-      float: right;
-      padding: 5px;
-      font-size: 36px;
-      color: #000000;
-      transition: all .2s;
-    }
-
-    input.star:checked ~ label.star:before {
-      content: '★';
-      color: #FD4;
-      transition: all .25s;
-    }
-
-    input.star-5:checked ~ label.star:before {
-      color: #FE7;
-      text-shadow: 0 0 5px #952;
-    }
-
-    input.star-1:checked ~ label.star:before { color: #F62; }
-
-    label.star:hover { transform: rotate(-15deg) scale(1.3); }
-
-    label.star:before {
-      content: '☆';
-    }
-  </style>
 </div>
 
 {% endblock %}
