--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -138,6 +138,7 @@
                                 <span data-feather="file-text" class="align-text-bottom"></span>
                                 Inventory
                             </a>
+                        </a>
                     </li>
                     {% if user.is_superuser %}
                     <li class="nav-item">
@@ -150,6 +151,7 @@
                                 <span data-feather="file-text" class="align-text-bottom"></span>
                                 Tips
                             </a>
+                        </a>
                     </li>
                     <li class="nav-item">
                         {% url 'tasks_evaluation' as tasks_evaluation_url %}
@@ -161,6 +163,19 @@
                                 <span data-feather="file-text" class="align-text-bottom"></span>
                                 Tasks
                             </a>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        {% url 'ratings_evaluation' as ratings_evaluation_url %}
+                        {% if request.path == ratings_evaluation_url %}
+                        <a class="nav-link active" href="{% url 'ratings_evaluation' %}">
+                            {% else %}
+                            <a class="nav-link" href="{% url 'ratings_evaluation' %}">
+                                {% endif %}
+                                <span data-feather="file-text" class="align-text-bottom"></span>
+                                Ratings
+                            </a>
+                        </a>
                     </li>
                     {% endif %}
                 </ul>
