--- a/tasks/templates/tasks_list_evaluation.html
+++ b/tasks/templates/tasks_list_evaluation.html
@@ -10,7 +10,13 @@
 <div style="width: 100%;">
     {% for weekday in weekdays%}
     <div class="list-group">
-        <h4 data-bs-toggle="collapse" href="#collapse{{ weekday }}" role="button" class="list-group-item" style="margin-bottom: 0px; margin-top: 15px;">{{ weekday }}</h4>
+        <h4 data-bs-toggle="collapse"
+            href="#collapse{{ weekday }}"
+            role="button"
+            class="list-group-item"
+            style="margin-bottom: 0px; margin-top: 15px;">
+            {{ weekday }}
+        </h4>
         <div class="list-group-item collapse {% if weekday == today %}show{% endif %}" id="collapse{{ weekday }}">
             <table class="table table-hover">
                 <thead>
@@ -23,7 +29,7 @@
                 {% for key, tasks in tasks.items %}
                     {% if key == weekday %}
                         {% for task in tasks %}
-                        <tr {% if weekday in task.done.keys %} class="done" {% endif %}>
+                        <tr class="{% if weekday in task.done.keys %}done{% else %}open{% endif %}">
                             <td style="vertical-align: middle;"><label>{{ task.title }}</label></td>
                             <td style="vertical-align: middle;">
                                 <label style="font-size: 12px;">
@@ -56,12 +62,15 @@
     user-select: none;
     height: 100%;
   }
-  tbody tr {
+  h4 {
+    background-color: rgb(248, 215, 218);
+  }
+  .done {
+    background-color: rgb(209, 231, 221);
+  }
+  .open {
     background-color: rgb(248, 215, 218);
     border-bottom-color: rgb(201, 192, 192) !important;
-  }
-  tbody tr.done {
-    background-color: rgb(209, 231, 221);
   }
   td:not(first-child) {
     padding: 0rem !important;
@@ -74,10 +83,25 @@
 
 <script type="text/javascript">
   (() => {
-    console.log("collapse{{ today }}");
     document.getElementById("collapse{{ today }}").scrollIntoView({
       behavior: 'smooth'
     });
+
+    // Colorize weekdays depending on tasks done
+    const listGroupItems = document.querySelectorAll('h4.list-group-item');
+    for (const [index, listGroupItem] of listGroupItems.entries()) {
+      const collapseElement = listGroupItem.nextElementSibling;
+      const areAllSubTrsDone = Array.from(collapseElement.querySelectorAll('tbody tr')).every((trElement) => {
+        return trElement.classList.contains('done');
+      });
+      listGroupItem.classList.add(areAllSubTrsDone ? 'done' : 'open');
+      if (index > 0) {
+        listGroupItem.classList.add('not-first');
+      }
+    }
+    const firstListGroupItem = listGroupItems[0];
+    firstListGroupItem.classList.remove('not-first');
+
   })()
 </script>
 
