--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -44,27 +44,7 @@
               {% if category.name in product.category.all %}
                 <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                   <span style="font-size: 2rem">
-                    {% if category.name|stringformat:"s" == "Obst und Gemüse" %}
-                    🍊
-                    {% elif category.name|stringformat:"s" == "Flüssig" %}
-                    💧
-                    {% elif category.name|stringformat:"s" == "Putzmittel" %}
-                    🪣
-                    {% elif category.name|stringformat:"s" == "Nüsse und Trockenfrüchte" %}
-                    🥜
-                    {% elif category.name|stringformat:"s" == "Backzutaten" %}
-                    🧁
-                    {% elif category.name|stringformat:"s" == "Milchprodukte" %}
-                    🥛
-                    {% elif category.name|stringformat:"s" == "Getränke" %}
-                    🍹
-                    {% elif category.name|stringformat:"s" == "Tiefkühler" %}
-                    🧊
-                    {% elif category.name|stringformat:"s" == "Gewürze" %}
-                    🌶️
-                    {% elif category.name|stringformat:"s" == "Trocken" %}
-                    🌾
-                    {% endif %}
+                    {{ category.emoji }}
                   </span>
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
