--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -131,7 +131,7 @@
           window.scrollTo(0, 0);
         }
       }
-      request.open('POST', '/inventory/');
+      request.open('POST', '/inventory/All');
       request.setRequestHeader("X-CSRFToken", csrftoken); 
       request.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
       request.send(JSON.stringify(objSerializedForm));
