--- a/inventory/templates/inventory_evaluation.html
+++ b/inventory/templates/inventory_evaluation.html
@@ -20,7 +20,7 @@
       <tr>
         <th scope="col" width="1%"></th>
         <th scope="col">Name</th>
-        <th scope="col">Category</th>
+        <th scope="col">Storages</th>
         <th scope="col" style="white-space: nowrap;">To buy</th>
       </tr>
     </thead>
@@ -30,7 +30,7 @@
         <tr>
           <td><input type="checkbox" id="checkbox{{forloop.counter}}"></td>
           <td><label for="checkbox{{forloop.counter}}">{{ product.name }}</label></td>
-          <td><label for="checkbox{{forloop.counter}}">{{ product.category.all|join:", " }}</label></td>
+          <td><label for="checkbox{{forloop.counter}}">{{ product.storages|join:", " }}</label></td>
           <td><label for="checkbox{{forloop.counter}}">{{ product.value_tobuy|floatformat:2 }} {{ product.unit.all|join:", " }}</label></td>
         </tr>
         {% endif %}
