--- a/inventory/templates/inventory_evaluation.html
+++ b/inventory/templates/inventory_evaluation.html
@@ -13,31 +13,31 @@
 </div>
 
 <div style="width: 100%;">
-  {% for branch in branches%}
-  <h4>{{ branch }}</h4>
   <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Storage</th>
-        <th scope="col" style="white-space: nowrap;">Availability</th>
-      </tr>
-    </thead>
     <tbody>
-      {% for product in products %}
-        {% for storage in product.storages %}
-          {% if storage in branch.get_storages %}
-          <tr>
-            <td>{{ product.name }}</td>
-            <td>{{ product.storages|join:", " }}</td>
-            <td>{{ product.value_tobuy|floatformat:2 }} {{ product.unit.all|join:", " }}</td>
-          </tr>
-          {% endif %}
+      {% for branch in branches%}
+        <tr class="title">
+          <th colspan="3">{{ branch }}</th>
+        </tr>
+        <tr class="header">
+          <th scope="col">Name</th>
+          <th scope="col">Storage</th>
+          <th scope="col" style="white-space: nowrap;">Availability</th>
+        </tr>
+        {% for product in products %}
+          {% for storage in product.storages %}
+            {% if storage in branch.get_storages %}
+            <tr>
+              <td>{{ product.name }}</td>
+              <td>{{ product.storages|join:", " }}</td>
+              <td>{{ product.value_tobuy|floatformat:2 }} {{ product.unit.all|join:", " }}</td>
+            </tr>
+            {% endif %}
+          {% endfor %}
         {% endfor %}
       {% endfor %}
     </tbody>
   </table>
-  {% endfor %}
 </div>
 
 <style>
@@ -51,6 +51,19 @@
     padding: .9rem;
     user-select: none;
     height: 100%;
+  }
+  tr.title th {
+    padding-top: 3rem !important;
+  }
+  tr.title:first-child th {
+    padding-top: 1rem !important;
+  }
+  tbody tr.header:hover, tbody tr.title:hover {
+    background-color: white !important;
+    box-shadow: none !important;
+  }
+  .table > :not(caption) > * > * {
+    box-shadow: none !important;
   }
 </style>
 {% endblock %}
